# llm-extractor

./: .env.local.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LLM_assist_batch.py  LLM_assist_human.py  LLM_validation.py  README.md  check_patho_reports.py  deidentification.py  ensemble.py  extract_patho_report.py  json_to_txt.py  pipeline.py  pyproject.toml  qc_app.py  requirements.txt  schema.json  schema.schema.json  verify.py
.github/workflows/: ci.yml
docs/adr/: 0001-local-first-llm-with-cloud-fallback.md  0002-deidentification-with-separated-mapping-key.md  0003-prompt-based-extraction-with-freeform-json.md  README.md
tests/: test_ensemble.py  test_fallback.py  test_pipeline.py  test_qc_app.py  test_schema_consistency.py  test_verify.py
